<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.Login">

    <!--Details-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Title-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:background="@drawable/app_icon" />

        </LinearLayout>

        <!--Login Details & Sign in button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0.58"
            android:background="@drawable/rectangle_bg"
            android:orientation="vertical">

            <!--Login Details-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <!--Email Address-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="start"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center_vertical"
                    android:text="@string/email_address_with_star"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/default_texts" />

                <LinearLayout
                    android:id="@+id/ly_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.88">

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/public_medium"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/default_texts" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.12"
                        android:gravity="center|end">

                        <TextView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_email"
                            android:gravity="center" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/line_email"
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:background="@color/Gray" />

                <!--Password-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center_vertical"
                    android:text="@string/password"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/default_texts" />

                <LinearLayout
                    android:id="@+id/ly_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.88">

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/public_medium"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/lrm_email_pass_no" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyPassVisibility"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.12"
                        android:gravity="center|end"
                        android:theme="@style/AppTheme.MyRipple">

                        <TextView
                            android:id="@+id/ivPassVisible"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_pass_visible"
                            android:gravity="center" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/line_password"
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:background="@color/Gray" />

                <!--Forgot Password-->
                <LinearLayout
                    android:id="@+id/lyForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:theme="@style/AppTheme.MyRipple_selected"
                    android:weightSum="1.0">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/public_medium"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white_25"
                        android:textSize="@dimen/default_texts" />

                </LinearLayout>

                <!--Simple Login & Social Login-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <!--Login-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txtSignin"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:background="@drawable/round_bg_login_regi"
                            android:fontFamily="@font/public_medium"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/cd_topic"
                            android:theme="@style/AppTheme.MyRipple" />

                    </LinearLayout>

                    <!--Or Login using Social Media-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:fontFamily="@font/public_medium"
                            android:gravity="center"
                            android:text="@string/or_Login_using_Social_Media"
                            android:textColor="@color/white"
                            android:textSize="@dimen/lrm_email_pass_no" />

                    </LinearLayout>

                    <!--Google & Facebook-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:orientation="horizontal">



                        <!--Google-->
                        <LinearLayout
                            android:id="@+id/lyGmail"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:theme="@style/AppTheme.MyRipple">

                            <!--Google icon-->
                            <TextView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:background="@drawable/ic_gmail"
                                android:gravity="center" />

                        </LinearLayout>


                        <!--Facebook-->
                        <LinearLayout
                            android:id="@+id/lyFacebook"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:theme="@style/AppTheme.MyRipple"
                            android:visibility="visible">

                            <!--Facebook icon-->
                            <TextView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:background="@drawable/ic_facebook"
                                android:gravity="center" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!--Don't have an Account? Register Now-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/public_medium"
                android:gravity="center"
                android:text="@string/do_not_have_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/lrm_email_pass_no" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/public_round_bold"
                android:gravity="center"
                android:text="@string/register_now"
                android:textColor="@color/white"
                android:textSize="@dimen/lrm_email_pass_no"
                android:theme="@style/AppTheme.MyRipple" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>