<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screens_gradient"
    tools:context=".Activity.ForgotActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screens_gradient"
        android:orientation="vertical">

        <!--Top corner-->
        <TextView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_corner_shape"
            android:fontFamily="@font/public_medium"
            android:gravity="center" />

        <!--Bottom corner-->
        <TextView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ic_corner_shape"
            android:fontFamily="@font/public_medium"
            android:gravity="center"
            android:rotation="180" />

        <!--Details-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1.0">

            <!--Top image-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:src="@drawable/app_icon" />

            </LinearLayout>

            <!--Email-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/new_password_have_been_send_to_register_email_address"
                    android:textColor="@color/light_colorPrimary"
                    android:textSize="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <!--Email Address-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="1.0">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:src="@drawable/ic_email" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.9">

                            <EditText
                                android:id="@+id/etEmail"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@android:color/transparent"
                                android:fontFamily="@font/public_medium"
                                android:hint="@string/email_address_with_star"
                                android:imeOptions="actionDone"
                                android:inputType="textEmailAddress"
                                android:singleLine="true"
                                android:textColor="@color/white"
                                android:textColorHint="@color/text_gray"
                                android:textSize="@dimen/lrm_email_pass_no" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/Gray" />

            </LinearLayout>

            <!--SEND button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="1.0">

                    <TextView
                        android:id="@+id/txtSend"
                        android:layout_width="200dp"
                        android:layout_height="45dp"
                        android:background="@drawable/round_bg_r10_light"
                        android:fontFamily="@font/public_medium"
                        android:gravity="center"
                        android:text="@string/send"
                        android:textColor="@color/white"
                        android:textSize="@dimen/lrm_button_text" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>